<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="categorias_array">
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Cena</item>
        <item>Postre</item>
        <item>Bebida</item>
        <item>Vegetariana</item> </string-array>

    <string name="app_name">MyGeniusGastroProyec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_agregar">agregar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="todo">TODO</string>
    <string name="descripcion_imagen_receta">Imagen de la receta</string>
    <string name="descripcion_favorito">Botón de favorito</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="usuario_example_com">usuario@example.com</string>
    <string name="aqu_puedes_poner_una_breve_descripci_n_del_perfil">Aquí puedes poner una breve descripción del perfil.</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="email_input_field">Email input field</string>
    <string name="nombre_de_la_receta">Nombre de la receta</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparacion">Preparación</string>
    <string name="guardar_receta">Guardar receta</string>
    <string name="fondo_de_login">Fondo de login</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="GeniusGastro">GeniusGastro</string>
    <string name="actualizar">Actualizar</string>
    <string name="preparaci_n">Preparación</string>
    <string name="ingredientes1">Ingredientes</string>
    <string name="nombre_de_la_receta_">Nombre de la receta</string>
    <string name="agregar_receta">Agregar Receta</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="gastrogenius">GastroGenius</string>
    <string name="no_tienes_favoritos">no_tienes_favoritos</string>
    <string name="lista_de_recetas">lista_de_recetas</string>
    <string name="lista_de_recetas_favoritas">lista_de_recetas_favoritas</string>
    <string name="adjuntar_imagen_de_reseta">adjuntar imagen de reseta</string>
    <string name="adjuntar_imagen_de_receta">Adjuntar Imagen de receta</string>
    <string name="adjuntar_foto_de_perfil">adjuntar foto de perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre_de_la_categor_a">Nombre de la Categoría</string>
    <string name="lista_de_recetas_filtradas">lista_de_recetas_filtradas</string>
    <string name="descripcion_buscar_recetas_categoria">descripcion_buscar_recetas_categoria</string>
    <string name="lista_de_categorias_recetas">lista_de_categorias_recetas</string>
    <string name="explora_nuestras_categor_as">Explora Nuestras Categorías</string>
</resources>