<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo1"
        android:contentDescription="@string/fondo_de_login" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:text="@string/gastrogenius"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="33sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesion"
            android:textAlignment="center"
            android:textColor="#FBFBFB"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#CCCCCC"
            android:hint="@string/correo_electronico"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#CCCCCC"
            android:hint="@string/contraseña"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_design"
            android:padding="14dp"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnIrARegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/registrarse"
            android:background="@drawable/btn_bg_design"
            android:backgroundTint="@android:color/darker_gray"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</FrameLayout>

