<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumgray"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfilePic" android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/perfil"
            android:contentDescription="@string/adjuntar_foto_de_perfil"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="32dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textBienvenida"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/adjuntar_foto_de_perfil"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePic" />

        <EditText
            android:id="@+id/editTextFullName" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints="name"
            android:fontFamily="@font/lobster"
            android:hint="@string/nombre_de_usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBienvenida"
            android:enabled="false"/>

        <EditText
            android:id="@+id/editTextEmail" android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:fontFamily="@font/lobster"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextFullName"
            android:enabled="false"/>

        <EditText
            android:id="@+id/editDescripcion"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:gravity="top|start"
            android:hint="@string/aqu_puedes_poner_una_breve_descripci_n_del_perfil"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="12dp"
            android:fontFamily="@font/lobster"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            android:enabled="false"/>

        <Button
            android:id="@+id/buttonEditProfile" android:layout_width="wrap_content"
            android:fontFamily="@font/lobster"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/editDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lobster"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/buttonEditProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>