<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/mediumgray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/adjuntar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="Adjuntar imagen"
            android:src="@drawable/adjuntar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/adjuntar_imagen_de_receta"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adjuntar" />


        <EditText
            android:id="@+id/editNombreReceta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="40dp"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:fontFamily="@font/lobster"
            android:textColor="@color/white"
            android:backgroundTint="#CCCCCC"
            android:textColorHint="@color/white"
            android:hint="@string/nombre_de_la_receta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <EditText
            android:id="@+id/editIngredientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/ingredientes"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:fontFamily="@font/lobster"
            android:textColor="@color/white"
            android:backgroundTint="#CCCCCC"
            android:textColorHint="@color/white"
            android:gravity="top"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editNombreReceta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/editPreparacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/preparacion"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:fontFamily="@font/lobster"
            android:gravity="top"
            android:textColor="@color/white"
            android:backgroundTint="#CCCCCC"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editIngredientes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnGuardarReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_receta"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/editPreparacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
